--- a/agree/res/layout/fragment_home.xml
+++ b/agree/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeFragment" >
@@ -7,8 +8,34 @@
     <!-- TODO: Update blank fragment layout -->
 
     <RelativeLayout
+        android:id="@+id/home_title"
         android:layout_width="match_parent"
-        android:layout_height="50.0dp" >
+        android:layout_height="50.0dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="1.0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="#aaaaaa" />
+
+        <TextView
+            android:id="@+id/tab_home_new"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/tab_home_title"
+            android:layout_alignBottom="@+id/tab_home_title"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="14dp"
+            android:gravity="center"
+            android:text="新建"
+            android:textColor="#d3d3d3"
+            android:textSize="17.0sp" />
 
         <TextView
             android:id="@+id/tab_home_title"
@@ -17,37 +44,26 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="必聚"
-            android:textSize="18sp"
-             />
-
-        <RelativeLayout
-            android:layout_width="60.0dp"
-            android:layout_height="50.0dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true" >
-
-            <TextView
-                android:id="@+id/tab_home_new"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                android:text="新建"
-                android:textColor="#d3d3d3"
-                android:textSize="17.0sp" />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="1.0dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-			android:background="#aaaaaa"            
-            />
-
+            android:textSize="18sp" />
     </RelativeLayout>
 
-</FrameLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/home_title"
+        android:layout_centerHorizontal="true" >
+
+        <TextView
+            android:id="@+id/home_requsetcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="70dp"
+            android:text="收到了邀请码？"
+            android:gravity="center"
+            android:textColor="#55aeae"
+            android:textSize="25.0sp" />
+    </RelativeLayout>
+
+</RelativeLayout>
