--- a/agree/res/layout/fragment_home.xml
+++ b/agree/res/layout/fragment_home.xml
@@ -53,7 +53,7 @@
         android:layout_below="@+id/home_title"
         android:layout_centerHorizontal="true" >
 
-        <TextView
+        <!-- <TextView
             android:id="@+id/home_requsetcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,7 +63,17 @@
             android:text="收到了邀请码？"
             android:gravity="center"
             android:textColor="#55aeae"
-            android:textSize="25.0sp" />
+            android:textSize="25.0sp" /> -->
+
+        <GridView
+            android:id="@+id/home_gridview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:numColumns="2" >
+        </GridView>
+
     </RelativeLayout>
 
 </RelativeLayout>
