--- a/agree/res/layout/activity_login.xml
+++ b/agree/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:visibility="gone" >
+         >
 
         <TextView
             android:id="@+id/Login_registered"
@@ -70,7 +70,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" >
+        android:layout_centerVertical="true" 
+        android:visibility="gone"
+        >
 
         <TextView
             android:id="@+id/textView1"
