--- a/agree/res/layout/activity_registered.xml
+++ b/agree/res/layout/activity_registered.xml
@@ -5,17 +5,6 @@
     android:background="#ffffff"
     tools:context=".RegisteredActivity" >
 
-    <!--
-         <ImageView
-        android:id="@+id/registered_head"
-        android:layout_width="80.0dp"
-        android:layout_height="80.0dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/login_1" />
-    -->
-
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
@@ -39,6 +28,8 @@
                 android:textColor="#d3d3d3"
                 android:textSize="17.0sp" />
         </RelativeLayout>
+
+
     </RelativeLayout>
 
     <TextView
@@ -94,10 +85,13 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignBottom="@+id/registered_head"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="87dp"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_marginBottom="28dp"
+        android:text="TextView"
+        android:textColor="#D3D3D3" 
+        android:visibility="gone"
+        android:gravity="center"
+        />
 
 </RelativeLayout>
