--- a/agree/res/layout/fragment_friends.xml
+++ b/agree/res/layout/fragment_friends.xml
@@ -21,8 +21,8 @@
              />
 
         <RelativeLayout
-            android:layout_width="60.0dp"
-            android:layout_height="50.0dp"
+            android:layout_width="80.0dp"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true" >
 
