--- a/agree/res/layout/fragment_setting.xml
+++ b/agree/res/layout/fragment_setting.xml
@@ -1,14 +1,47 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingFragment" >
 
     <!-- TODO: Update blank fragment layout -->
 
-	<RelativeLayout
+    <TextView
+        android:id="@+id/textView1"
         android:layout_width="match_parent"
-        android:layout_height="50.0dp" >
+        android:layout_height="1.0dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/relativeLayout2"
+        android:background="#aaaaaa" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="50.0dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+
+        <RelativeLayout
+            android:layout_width="80.0dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+             >
+
+            <TextView
+                android:id="@+id/tab_setting_cancle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="注销"
+                android:gravity="center"
+                android:textColor="#d3d3d3"
+                android:textSize="17.0sp" 
+                />
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/tab_setting_title"
@@ -16,37 +49,61 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="我"
-            android:textSize="18sp"
-             />
-
-        <RelativeLayout
-            android:layout_width="60.0dp"
-            android:layout_height="50.0dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true" >
-
-            <TextView
-                android:id="@+id/tab_setting_new"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                android:text="新建"
-                android:textColor="#d3d3d3"
-                android:textSize="17.0sp" />
-
-        </RelativeLayout>
-        
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="1.0dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-			android:background="#aaaaaa"            
-            />
+            android:text="设置"
+            android:textSize="18sp" />
 
     </RelativeLayout>
-</FrameLayout>
+
+    <TextView
+        android:id="@+id/setting_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30.0dp"
+        />
+
+    <ImageView
+        android:id="@+id/setting_head"
+        android:layout_width="80.0dp"
+        android:layout_height="80.0dp"
+        android:layout_below="@+id/setting_number"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/login_selector" />
+
+    <TextView
+        android:id="@+id/setting_user"
+        android:layout_width="100.0dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="用户设置"
+        android:gravity="center"
+        android:textSize="20.0sp"
+         />
+
+    <TextView
+        android:id="@+id/setting_about_us"
+        android:layout_width="100.0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/setting_feedback"
+        android:layout_below="@+id/setting_feedback"
+        android:layout_marginTop="54dp"
+        android:text="关于我们"
+        android:gravity="center"
+        android:textSize="20.0sp"
+         />
+
+    <TextView
+        android:id="@+id/setting_feedback"
+        android:layout_width="100.0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/setting_user"
+        android:layout_below="@+id/setting_user"
+        android:layout_marginTop="56dp"
+        android:gravity="center"
+        android:text="用户反馈"
+        android:textSize="20.0sp" />
+
+</RelativeLayout>
