--- a/agree/res/layout/fragment_friends.xml
+++ b/agree/res/layout/fragment_friends.xml
@@ -1,12 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FriendsFragment" >
 
     <!-- TODO: Update blank fragment layout -->
 
-	<RelativeLayout
+    <RelativeLayout
+        android:id="@+id/friends_title"
         android:layout_width="match_parent"
         android:layout_height="50.0dp" >
 
@@ -17,36 +19,51 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="好友"
-            android:textSize="18sp"
-             />
+            android:textSize="18sp" />
 
         <RelativeLayout
-            android:layout_width="60.0dp"
-            android:layout_height="50.0dp"
+            android:id="@+id/tab_friends_addbuddy_layout"
+            android:layout_width="80.0dp"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true" >
 
             <TextView
-                android:id="@+id/tab_friends_new"
+                android:id="@+id/tab_friends_addbuddy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:gravity="center"
-                android:text="新建"
+                android:text="添加好友"
                 android:textColor="#d3d3d3"
                 android:textSize="17.0sp" />
-
         </RelativeLayout>
-        
+
         <TextView
             android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="1.0dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-			android:background="#aaaaaa"            
-            />
+            android:background="#aaaaaa" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/friends_title"
+        android:layout_centerHorizontal="true" >
+
+        <ListView
+            android:id="@+id/friends_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            >
+        </ListView>
 
     </RelativeLayout>
-</FrameLayout>
+
+</RelativeLayout>
