--- a/agree/res/layout/activity_user_setting.xml
+++ b/agree/res/layout/activity_user_setting.xml
@@ -247,11 +247,10 @@
             android:layout_marginTop="60dp"
             android:background="#ffffff"
             android:ems="10"
-            android:phoneNumber="true"
             android:gravity="center"
-            android:hint="电话号码:" />
-
+            android:hint="电话号码:" >
         <requestFocus />
+        </EditText>
     </RelativeLayout>
 
 </RelativeLayout>
