--- a/agree/res/layout/activity_request_code.xml
+++ b/agree/res/layout/activity_request_code.xml
@@ -25,7 +25,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="125dp"
-        android:background="#deffffff"
+        android:background="@null"
         android:ems="10"
         android:gravity="center"
         android:hint="请输入验证码"
