--- a/agree/res/layout/fragment_home.xml
+++ b/agree/res/layout/fragment_home.xml
@@ -50,38 +50,20 @@
                 android:text="新建"
                 android:textColor="#d3d3d3"
                 android:textSize="17.0sp" />
-
         </RelativeLayout>
     </RelativeLayout>
 
-    <RelativeLayout
+    <com.BJ.utils.GridViewWithHeaderAndFooter
+        android:id="@+id/home_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/home_title"
-        android:layout_centerHorizontal="true" >
-
-        <!--
-             <TextView
-            android:id="@+id/home_requsetcode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="70dp"
-            android:text="收到了邀请码？"
-            android:gravity="center"
-            android:textColor="#55aeae"
-            android:textSize="25.0sp" />
-        -->
-
-        <GridView
-            android:id="@+id/home_gridview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:numColumns="2" >
-        </GridView>
-    </RelativeLayout>
+        android:columnWidth="90dp"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="2"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="10dp" >
+    </com.BJ.utils.GridViewWithHeaderAndFooter>
 
 </RelativeLayout>
