--- a/agree/res/layout/activity_team_setting.xml
+++ b/agree/res/layout/activity_team_setting.xml
@@ -2,9 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TeamSettingActivity"
     android:background="#ffffff"
-     >
+    tools:context=".TeamSettingActivity" >
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
@@ -49,14 +48,22 @@
                 android:textColor="#d3d3d3"
                 android:textSize="17.0sp" />
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="0.50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="#aaaaaa" />
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
         android:layout_height="130.0dp"
         android:layout_below="@+id/relativeLayout1"
-        android:layout_centerHorizontal="true"
-         >
+        android:layout_centerHorizontal="true" >
 
         <ImageView
             android:id="@+id/TeamSetting_head"
@@ -75,12 +82,115 @@
             android:layout_alignLeft="@+id/TeamSetting_head"
             android:layout_alignRight="@+id/TeamSetting_head"
             android:layout_below="@+id/TeamSetting_head"
-            android:text="TextView"
-            android:gravity="center"
-            android:textSize="15.0sp"
             android:layout_marginTop="10.0dp"
-             />
-
+            android:gravity="center"
+            android:text="TextView"
+            android:textSize="15.0sp" />
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/TeamSetting_requestcode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/relativeLayout2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20.0dp"
+        android:text="生成小组邀请码"
+        android:textSize="20.0sp"
+         />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TeamSetting_requestcode"
+        android:layout_centerHorizontal="true"
+        android:text="点击以生成小组邀请码并复制，将它发送给其他好友，让他们加入你的小组"
+        android:textSize="8.50sp"
+        android:textColor="#000000"
+         />
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="35dp"
+        android:text="聚会信息提醒"
+        android:textSize="18.0sp"
+        android:textColor="#00e3e3"
+         />
+
+    <TextView
+        android:id="@+id/TeamSetting_message"
+        android:layout_width="70.0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/text"
+        android:layout_alignRight="@+id/textView2"
+        android:layout_marginRight="42dp"
+        android:gravity="center"
+        android:text="已开启"
+        android:textSize="15.0sp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/text"
+        android:layout_below="@+id/text"
+        android:layout_marginTop="35dp"
+        android:text="聊天信息提醒" 
+        android:textSize="18.0sp"
+        android:textColor="#00e3e3"
+        />
+
+    <TextView
+        android:id="@+id/TeamSetting_chat"
+        android:layout_width="70.0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/TeamSetting_message"
+        android:layout_alignTop="@+id/textView3"
+        android:gravity="center"
+        android:text="已开启"
+        android:textSize="15.0sp"
+        
+        
+        />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_below="@+id/textView3"
+        android:layout_marginTop="35dp"
+        android:text="公开手机号码"
+        android:textSize="18.0sp"
+        android:textColor="#00e3e3"
+         />
+
+    <TextView
+        android:id="@+id/TeamSetting_phone"
+        android:layout_width="70.0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/TeamSetting_chat"
+        android:layout_alignTop="@+id/textView5"
+        android:text="已公开"
+        android:textSize="15.0sp"
+        android:gravity="center"
+         />
+
+    <TextView
+        android:id="@+id/TeamSetting_exit"
+        android:layout_width="100.0sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView5"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:text="退出小组"
+        android:textColor="#ff0000"
+        android:textSize="18.0sp" />
 
 </RelativeLayout>
