--- a/agree/res/layout/fragment_party.xml
+++ b/agree/res/layout/fragment_party.xml
@@ -21,6 +21,7 @@
              />
 
         <RelativeLayout
+            android:id="@+id/tab_party_new_layout"
             android:layout_width="80.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
