--- a/agree/res/layout/activity_main.xml
+++ b/agree/res/layout/activity_main.xml
@@ -4,5 +4,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
+     <com.baidu.mapapi.map.MapView
+         android:id="@+id/bmapView"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:layout_alignParentTop="true"
+         android:clickable="true" 
+         android:layout_marginTop="50dp"/>
 
 </RelativeLayout>
