--- a/agree/res/layout/activity_time.xml
+++ b/agree/res/layout/activity_time.xml
@@ -16,9 +16,7 @@
             android:layout_width="80.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            
-             >
+            android:layout_centerVertical="true" >
 
             <TextView
                 android:id="@+id/time_back"
@@ -26,11 +24,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:text="返回" 
-                android:textSize="17.0sp"
+                android:text="返回"
                 android:textColor="#d3d3d3"
-                />
-
+                android:textSize="17.0sp" />
         </RelativeLayout>
 
         <TextView
@@ -40,18 +36,15 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="选择时间"
-            android:textSize="18.0sp"
             android:textColor="#000000"
-             />
+            android:textSize="18.0sp" />
 
         <RelativeLayout
             android:id="@+id/time_next_layout"
             android:layout_width="80.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            
-            >
+            android:layout_centerVertical="true" >
 
             <TextView
                 android:id="@+id/time_next"
@@ -60,10 +53,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="下一步"
-                android:textSize="17.0sp"
                 android:textColor="#d3d3d3"
-                 />
-
+                android:textSize="17.0sp" />
         </RelativeLayout>
 
         <TextView
@@ -71,10 +62,98 @@
             android:layout_width="match_parent"
             android:layout_height="0.50dp"
             android:layout_alignParentBottom="true"
-            android:background="#aaaaaa"	
-             />
-
+            android:background="#aaaaaa" />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/ datePicker_layout"
+        android:layout_width="match_parent"
+        android:layout_height="300.0dp"
+        android:layout_below="@+id/time_title_layout"
+        android:layout_centerHorizontal="true" >
+
+        <LinearLayout
+            android:id="@+id/ll_popup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ffeeeeee"
+            android:orientation="vertical" >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp" >
+
+                <RelativeLayout
+                    android:id="@+id/popupwindow_calendar_last_month"
+                    android:layout_width="70dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/popupwindow_calendar_month" >
+
+                    <TextView
+                        android:layout_width="9dp"
+                        android:layout_height="14dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/bt_calendar_last" />
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/popupwindow_calendar_month"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:textColor="#aa564b4b"
+                    android:textSize="18sp" />
+
+                <RelativeLayout
+                    android:id="@+id/popupwindow_calendar_next_month"
+                    android:layout_width="70dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/popupwindow_calendar_month" >
+
+                    <TextView
+                        android:layout_width="9dp"
+                        android:layout_height="14dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:background="@drawable/bt_calendar_next" />
+                </RelativeLayout>
+            </RelativeLayout>
+
+            <com.BJ.utils.KCalendar
+                android:id="@+id/popupwindow_calendar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+            </com.BJ.utils.KCalendar>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#bbcc3333" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/ datePicker_layout"
+        android:layout_centerHorizontal="true"
+        
+         >
+
+        <TimePicker
+            android:id="@+id/timePicker"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+    </RelativeLayout>
 
 </RelativeLayout>
