--- a/agree/res/layout/activity_ok_party.xml
+++ b/agree/res/layout/activity_ok_party.xml
@@ -89,9 +89,10 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/OkParty_note"
+        android:layout_alignParentLeft="true"
         android:layout_below="@+id/OkParty_note"
-        android:layout_marginTop="135dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="50dp"
         android:text="地址:"
         android:textSize="17.0sp" />
 
@@ -101,8 +102,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView7"
         android:layout_alignBottom="@+id/textView7"
-        android:layout_alignRight="@+id/OkParty_name"
-        android:layout_marginLeft="5.0dp"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/textView7"
         android:gravity="left"
         android:text="TextView"
         android:textSize="17.0sp" />
@@ -112,20 +113,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView7"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginLeft="20dp"
         android:gravity="left"
-        android:textSize="17.0sp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView7"
-        android:layout_below="@+id/OkParty_time"
-        android:layout_marginTop="28dp"
-        android:text="反馈设置"
+        android:text="TextView"
         android:textSize="17.0sp" />
 
     <TextView
@@ -133,7 +124,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView10"
-        android:layout_toRightOf="@+id/OkParty_time"
+        android:layout_centerHorizontal="true"
         android:text="开启" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/OkParty_time"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="20dp"
+        android:text="反馈设置"
+        android:textSize="17.0sp" />
 
 </RelativeLayout>
