--- a/agree/res/layout/party_item.xml
+++ b/agree/res/layout/party_item.xml
@@ -5,7 +5,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50.0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" >
 
@@ -16,46 +16,38 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10.0dp" >
-
-            <TextView
-                android:id="@+id/years_month"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:text="TextView"
-                android:textSize="15.0sp" />
-
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/relativeLayout2"
-            android:layout_width="150.0dp"
+            android:layout_width="180.0dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5.0dp"
+            android:layout_marginLeft="10.0dp"
             android:layout_toRightOf="@+id/relativeLayout1" >
 
             <TextView
                 android:id="@+id/name"
                 android:layout_width="match_parent"
-                android:layout_height="35.0dp"
+                android:layout_height="20.0dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:gravity="left"
+                android:gravity="left|center_vertical"
                 android:text="TextView"
-                android:textSize="18.0sp" />
+                android:layout_marginTop="5.0dp"
+                android:textSize="17.0sp" />
 
             <TextView
                 android:id="@+id/address"
                 android:layout_width="match_parent"
-                android:layout_height="25.0dp"
+                android:layout_height="20.0dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
-                android:gravity="left"
+                android:gravity="left|center_vertical"
                 android:text="TextView"
-                android:textSize="15.0sp" />
+                android:singleLine="true"
+                android:layout_marginTop="5.0dp"
+                android:textSize="13.0sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -70,21 +62,63 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:textSize="17.0sp"
-                android:layout_marginTop="10.0dp"
-                android:text="IN" />
+                android:layout_marginTop="5.0dp"
+                android:text="IN"
+                android:textSize="17.0sp" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
-                android:layout_height="30.0dp"
+                android:layout_height="25.0dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:gravity="center"
-                android:textSize="15.0sp"
-                android:text="0" />
-
+                android:text="0"
+                android:textSize="15.0sp" />
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="0.50dp"
+            android:layout_alignParentBottom="true"
+            android:background="#aaaaaa" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="0.50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:background="#aaaaaa" />
+
+        <TextView
+            android:id="@+id/years_month"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/relativeLayout2"
+            android:gravity="left|center_vertical"
+            android:text="TextView"
+            android:textColor="#00e3e3"
+            android:layout_marginLeft="10.0dp"
+            android:layout_marginTop="5.0dp"
+            android:textSize="13.0sp" />
+
+        <TextView
+            android:id="@+id/times"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/years_month"
+            android:layout_toLeftOf="@+id/relativeLayout2"
+            android:text="TextView"
+            android:textColor="#00e3e3"
+            android:layout_marginLeft="5.0dp"
+            android:gravity="left|center_vertical"
+            android:textSize="20.0sp"
+             />
+
     </RelativeLayout>
 
 </RelativeLayout>
